--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,5 @@ app.*.map.json
 /android/app/release
 
 #lib gitignore
-/lib/constants/api_key.dart
 /lib/test_widgets
-
+lib/constants/api_key.dart
