--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,10 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.4
   url_launcher: ^6.1.7
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   flutter_share: ^2.0.0
+  shared_preferences: ^2.2.0
+
   
  
 
@@ -58,8 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.3.2
-  hive_generator: ^2.0.0
+
   
 
 
