--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.0.11
   flutter_share: ^2.0.0
   shared_preferences: ^2.2.0
+  flutter_zoom_drawer: ^3.1.1
 
   
  
